--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
     </nav>
     <section id="home">
-        <h1>Trisara &nbsp; Asian &nbsp;&nbsp;Dining &nbsp;&nbsp;Restrudent</h1>
+        <h1>Trisara &nbsp; Asian &nbsp;&nbsp;Dining &nbsp;&nbsp;Restaurant</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe commodi autem adipisci a nobis voluptatum,
             porro facere! Distinctio fuga in aliquam iusto!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe commodi autem adipisci</p>
